showing class how to pull changes

--- a/portfolio copy/test.html
+++ b/portfolio copy/test.html
@@ -8,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    //comment
     <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Nam blanditiis optio nulla explicabo accusantium praesentium ex. Ab quia nemo cumque, hic, doloremque incidunt dolorum ipsum minus odio tenetur, ducimus distinctio?</p>
     <div class='centered'>Center Me<button>Test</button></div>
 </body>
